small fix to task configs

--- a/fast/all_tasks.ipynb
+++ b/fast/all_tasks.ipynb
@@ -200,10 +200,8 @@
     "    \"mnli-m\": TaskConfig(\"two\", \"multi\", 768*2, ['premise', 'hypothesis']),\n",
     "    \"mnli-mm\": TaskConfig(\"two\", \"multi\", 768*2, ['premise', 'hypothesis']),\n",
     "    \"qnli\": TaskConfig(\"two\", \"binary\", 768*2, ['question', 'sentence']),\n",
-    "    \"rte\": TaskConfig(\"two\", \"binary\", 768*2, ['premise', 'hypothesis']),\n",
-    "    \"wnli\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
     "    \"rte\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
-    "    \"qqp\": TaskConfig(\"two\", \"binary\", 768*2, ['question1', 'question2']),\n",
+    "    \"wnli\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
     "}\n",
     "\n",
     "current_task = \"sst2\"\n",
@@ -651,42 +649,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving results to ./output/val_results_mp_sst2_20231127_152129.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/54 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "expected np.ndarray (got BatchEncoding)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/jnb5885/projectx/fast/all_tasks.ipynb Cell 45\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/all_tasks.ipynb#Y152sdnNjb2RlLXJlbW90ZQ%3D%3D?line=23'>24</a>\u001b[0m feed_forward \u001b[39m=\u001b[39m FeedForward(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/all_tasks.ipynb#Y152sdnNjb2RlLXJlbW90ZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39m# Print stats to console\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/all_tasks.ipynb#Y152sdnNjb2RlLXJlbW90ZQ%3D%3D?line=26'>27</a>\u001b[0m epoch, val_loss, val_accuracy, val_f1, val_mcc \u001b[39m=\u001b[39m feed_forward\u001b[39m.\u001b[39;49mfit(X_train, Y_train, X_val, Y_val)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/all_tasks.ipynb#Y152sdnNjb2RlLXJlbW90ZQ%3D%3D?line=28'>29</a>\u001b[0m best_acc \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(best_acc, val_accuracy)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/all_tasks.ipynb#Y152sdnNjb2RlLXJlbW90ZQ%3D%3D?line=29'>30</a>\u001b[0m bar\u001b[39m.\u001b[39mset_description(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mBest Acc: \u001b[39m\u001b[39m{\u001b[39;00mbest_acc\u001b[39m:\u001b[39;00m\u001b[39m.5f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, Last test: \u001b[39m\u001b[39m{\u001b[39;00mval_accuracy\u001b[39m:\u001b[39;00m\u001b[39m.5f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/projectx/fast/utils/feed_forward.py:213\u001b[0m, in \u001b[0;36mFeedForward.fit\u001b[0;34m(self, X, y, X_val, y_val)\u001b[0m\n\u001b[1;32m    209\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstopper \u001b[39m=\u001b[39m EarlyStopper(\n\u001b[1;32m    210\u001b[0m         patience\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpatience, min_delta\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmin_delta)\n\u001b[1;32m    212\u001b[0m \u001b[39m# Run the training loop\u001b[39;00m\n\u001b[0;32m--> 213\u001b[0m trainloader \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mDataLoader(Data(\n\u001b[1;32m    214\u001b[0m     X, y), batch_size\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbatch_size, shuffle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, num_workers\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, drop_last\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m    215\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_epochs):\n\u001b[1;32m    216\u001b[0m \n\u001b[1;32m    217\u001b[0m     \u001b[39m# Set current loss value\u001b[39;00m\n\u001b[1;32m    218\u001b[0m     current_loss \u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m\n",
-      "File \u001b[0;32m~/projectx/fast/utils/feed_forward.py:56\u001b[0m, in \u001b[0;36mData.__init__\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     52\u001b[0m \u001b[39mX: features data\u001b[39;00m\n\u001b[1;32m     53\u001b[0m \u001b[39my: target/output data\u001b[39;00m\n\u001b[1;32m     54\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     55\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m torch\u001b[39m.\u001b[39mis_tensor(X) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m torch\u001b[39m.\u001b[39mis_tensor(y):\n\u001b[0;32m---> 56\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mX \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mfrom_numpy(X)\n\u001b[1;32m     57\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mfrom_numpy(y)\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected np.ndarray (got BatchEncoding)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for output file name\n",
-    "embedding_type = \"meanpool\"\n",
+    "embedding_type = \"mp\"\n",
+    "# embedding_type = \"cls\"\n",
+    "# embedding_type = \"st\"\n",
     "\n",
     "# setup for logging\n",
     "save_file_id = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
