--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,17 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device_name = \"cpu\"  # default device is CPU\n",
     "if torch.cuda.is_available():\n",
@@ -124,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,33 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 8551\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 1043\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 1063\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = load_dataset(\"glue\", task_param)\n",
     "data"
@@ -249,105 +217,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate encodings\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "if embedding_param == \"cls\" or embedding_param == \"mean_pooling\":\n",
-    "    X_train = data[\"train\"][\"sentence\"]\n",
-    "    X_val = data[\"validation\"][\"sentence\"]\n",
-    "    X_test = data[\"test\"][\"sentence\"]\n",
+    "# ~13 minutes for CLS\n",
     "\n",
-    "    Y_train = data[\"train\"][\"label\"]\n",
-    "    Y_val = data[\"validation\"][\"label\"]\n",
-    "    Y_test = data[\"test\"][\"label\"]\n",
+    "class CustomDataset(Dataset):\n",
+    "    def __init__(self, sentences, labels, sentences2=None):\n",
+    "        self.sentences = sentences\n",
+    "        self.labels = labels\n",
+    "        self.sentences2 = sentences2\n",
     "\n",
-    "    X_train = tokenizer(X_train, padding=True, truncation=True, return_tensors='pt')\n",
-    "    X_val = tokenizer(X_val, padding=True, truncation=True, return_tensors='pt')\n",
-    "    X_test = tokenizer(X_test, padding=True, truncation=True, return_tensors='pt')\n",
-    "elif embedding_param == \"sentence_transformer\":\n",
-    "    # EXPENSIVE OPERATION: This cell may take about 2 minutes or more to run\n",
-    "    with torch.no_grad():\n",
-    "        if task_config.sentence_type == \"one\":\n",
-    "            X_train = model.encode(data[\"train\"][task_config.col_names[0]])\n",
-    "            X_val = model.encode(data[\"validation\"][task_config.col_names[0]])\n",
-    "            X_test = model.encode(data[\"test\"][task_config.col_names[0]])\n",
-    "        elif task_config.sentence_type == \"two\":\n",
-    "            X_train_u = model.encode(data[\"train\"][task_config.col_names[0]])\n",
-    "            X_val_u = model.encode(data[\"validation\"][task_config.col_names[0]])\n",
-    "            X_test_u = model.encode(data[\"test\"][task_config.col_names[0]])\n",
+    "    def __len__(self):\n",
+    "        return len(self.sentences)\n",
     "\n",
-    "            X_train_v = model.encode(data[\"train\"][task_config.col_names[1]])\n",
-    "            X_val_v = model.encode(data[\"validation\"][task_config.col_names[1]])\n",
-    "            X_test_v = model.encode(data[\"test\"][task_config.col_names[1]])\n",
+    "    def __getitem__(self, idx):\n",
+    "        sentence = self.sentences[idx]\n",
+    "        label = self.labels[idx]\n",
     "\n",
-    "            X_train = np.concatenate([X_train_u, X_train_v]\n",
-    "                                    , axis=1)\n",
-    "            X_val = np.concatenate([X_val_u, X_val_v], axis=1)\n",
-    "            X_test = np.concatenate([X_test_u, X_test_v], axis=1)\n",
-    "        else:\n",
-    "            raise Exception(f\"{task_config.sentence_type}: sentence type not recognized\")\n",
+    "        if embedding_param == \"cls\" or embedding_param == \"mean_pooling\":\n",
+    "            # Tokenize the sentence\n",
+    "            tokenized = tokenizer(sentence, padding=True, truncation=True, return_tensors='pt')\n",
+    "\n",
+    "            # Perform model inference\n",
+    "            with torch.no_grad():\n",
+    "                outputs = model(**tokenized)\n",
+    "        elif embedding_param == \"sentence_transformer\":\n",
+    "            with torch.no_grad():\n",
+    "                sentence2 = self.sentences2[idx]\n",
+    "                embeddings = model.encode(sentence) # j gonna call them embeddings for now x\n",
+    "                if task_config.sentence_type == \"two\":\n",
+    "                    tokenized_2 = model.encode(sentence2)\n",
+    "                    embeddings = np.concatenate([embeddings, tokenized_2], axis=1)\n",
     "        \n",
-    "        Y_train = np.array(data[\"train\"][\"label\"])\n",
-    "        Y_val = np.array(data[\"validation\"][\"label\"])\n",
-    "        Y_test = np.array(data[\"test\"][\"label\"])"
+    "        # Extract embeddings\n",
+    "        if embedding_param == \"cls\":\n",
+    "            embeddings = extract_cls_embeddings(outputs)  \n",
+    "        elif embedding_param == \"mean_pooling\":\n",
+    "            embeddings = mean_pooling(outputs, outputs['attention_mask'])\n",
+    "\n",
+    "        return embeddings, label\n",
+    "\n",
+    "\n",
+    "if embedding_param == \"sentence_transformer\" and task_config.sentence_type == \"two\":\n",
+    "    train_dataset = CustomDataset(data[\"train\"][task_config.col_names[0]], data[\"train\"][\"label\"], data[\"train\"][task_config.col_names[1]])\n",
+    "    val_dataset = CustomDataset(data[\"validation\"][task_config.col_names[0]], data[\"validation\"][\"label\"], data[\"validation\"][task_config.col_names[1]])\n",
+    "    test_dataset = CustomDataset(data[\"test\"][task_config.col_names[0]], data[\"test\"][\"label\"], data[\"test\"][task_config.col_names[1]])\n",
+    "else: # if cls, mp, or st type one\n",
+    "    train_dataset = CustomDataset(data[\"train\"][task_config.col_names[0]], data[\"train\"][\"label\"])\n",
+    "    val_dataset = CustomDataset(data[\"validation\"][task_config.col_names[0]], data[\"validation\"][\"label\"])\n",
+    "    test_dataset = CustomDataset(data[\"test\"][task_config.col_names[0]], data[\"test\"][\"label\"])\n",
+    "\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "val_dataloader = DataLoader(train_dataset, batch_size=32)\n",
+    "test_dataloader = DataLoader(train_dataset, batch_size=32)\n",
+    "\n",
+    "# DataLoader iteration\n",
+    "for batch in train_dataloader:\n",
+    "    X_train, Y_train = batch\n",
+    "    # X_train = np.array(X_train) # When you iterate through a DataLoader, the batch that is returned from the dataset is automatically converted into tensors by PyTorch. Convert BACK?!\n",
+    "for batch in val_dataloader:\n",
+    "    X_val, Y_val = batch\n",
+    "#     X_val = np.array(X_val) \n",
+    "for batch in test_dataloader:\n",
+    "    X_test, Y_test = batch\n",
+    "#     X_test = np.array(X_test) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "what\n",
-      "here?\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Extract embeddings for CLS or mean pooling\n",
-    "if embedding_param == \"cls\":\n",
-    "    # EXPENSIVE OPERATION: This cell may take about 2 minutes or more to run\n",
-    "    with torch.no_grad():\n",
-    "        X_train = model(**X_train)\n",
-    "        X_val = model(**X_val)\n",
-    "        X_test = model(**X_test)\n",
-    "    \n",
-    "    X_train = extract_cls_embeddings(X_train)\n",
-    "    X_val = extract_cls_embeddings(X_val)\n",
-    "    X_test = extract_cls_embeddings(X_test)\n",
-    "\n",
-    "elif embedding_param == \"mean_pooling\":\n",
-    "    X_train_saved_mask = X_train['attention_mask'].to(device)\n",
-    "    X_val_saved_mask = X_val['attention_mask'].to(device)\n",
-    "    X_test_saved_mask = X_test['attention_mask'].to(device)\n",
-    "\n",
-    "    X_train.to(device)\n",
-    "    X_val.to(device)\n",
-    "    X_test.to(device)\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        X_train = model(**X_train)\n",
-    "        X_val = model(**X_val)\n",
-    "        X_test = model(**X_test)\n",
-    "\n",
-    "    X_train = mean_pooling(X_train, X_train_saved_mask)\n",
-    "    X_val = mean_pooling(X_val, X_val_saved_mask)\n",
-    "    X_test = mean_pooling(X_test, X_test_saved_mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save files\n",
+    "# TODO: load_file has bugs :(\n",
     "output_directory = f\"./output/{embedding_param}\"\n",
     "\n",
     "Path(output_directory).mkdir(parents=True, exist_ok=True)\n",
@@ -357,7 +304,7 @@
     "    def save_file(file1, file2):\n",
     "        np.save(file1, file2)\n",
     "    def load_file(file1):\n",
-    "        np.load(file1)\n",
+    "        np.load(file1, allow_pickle=True)\n",
     "elif embedding_param == \"sentence_transformer\":\n",
     "    x_suffix = \"pt\"\n",
     "    def save_file(file1, file2):\n",
@@ -487,7 +434,6 @@
    "source": [
     "# results_df = pd.read_csv(results_filename)\n",
     "results_df = pd.read_csv(\"output/val_results_cola_20231127_151717.csv\")\n",
-    "\n",
     "metric = \"mcc\"\n",
     "best = results_df[metric].max()\n",
     "best_row = results_df[results_df[metric] == best]\n",
@@ -509,7 +455,6 @@
    "outputs": [],
    "source": [
     "# manually set this based on output CSV file\n",
-    "\n",
     "best_params = {\n",
     "    'num_epochs': 50,\n",
     "    'batch_size': 128,\n",
