dataloaders working for single sentence tasks

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,32 +30,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "random.seed(0)  # standardized default seed\n",
-    "\n",
-    "import torch\n",
-    "from datasets import load_dataset\n",
-    "\n",
+    "import csv\n",
+    "import pathlib\n",
+    "import itertools\n",
+    "from datetime import datetime\n",
     "from collections import namedtuple\n",
+    "from tqdm import tqdm\n",
     "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from datasets import load_dataset\n",
     "\n",
     "from utils.feed_forward import FeedForward\n",
     "from utils.cls import extract_cls_embeddings\n",
-    "from utils.mean_pooling import mean_pooling\n",
-    "\n",
-    "import itertools\n",
-    "import pandas as pd\n",
-    "\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import datetime\n",
-    "import csv\n",
-    "import tqdm"
+    "from utils.mean_pooling import mean_pooling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# standardized default seed\n",
+    "seed = 7\n",
+    "random.seed(seed)\n",
+    "np.random.seed(seed)\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed_all(seed)"
    ]
   },
   {
@@ -67,9 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "device_name = \"cpu\"  # default device is CPU\n",
     "if torch.cuda.is_available():\n",
@@ -116,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,9 +152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.bias', 'lm_head.dense.bias', 'lm_head.layer_norm.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
    "source": [
     "if model_param == \"MPNetBase\": # MPNet Base\n",
     "    from transformers import MPNetTokenizer, MPNetModel\n",
@@ -165,13 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sentence_type: [\"one\", \"two\"]\n",
     "# class_type: [\"binary\", \"multi\", \"regression\"]\n",
-    "# input_size: int (represents input size of feedforward, could also be called embedding size)\n",
+    "# input_size: int (represents input size of feedforward, aka embedding size)\n",
     "# col_names: column names of relavent sentences on hugging face\n",
     "\n",
     "TaskConfig = namedtuple(\"TaskConfig\", [\"sentence_type\", \"class_type\", \"input_size\", \"col_names\"])\n",
@@ -200,9 +228,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 8551\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 1043\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 1063\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = load_dataset(\"glue\", task_param)\n",
     "data"
@@ -212,17 +264,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Embedding"
+    "# Generating Embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "class GLUESingleSentence(Dataset):\n",
+    "    def __init__(self, texts, tokenizer, max_length=512):\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.texts = texts\n",
+    "        self.max_length = max_length\n",
     "\n",
+    "    def __len__(self):\n",
+    "        return len(self.texts)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        text = self.texts[idx]\n",
+    "        inputs = self.tokenizer.encode_plus(\n",
+    "            text, \n",
+    "            add_special_tokens=True, \n",
+    "            max_length=self.max_length,\n",
+    "            padding='max_length',\n",
+    "            truncation=True,\n",
+    "            return_tensors='pt'\n",
+    "        )\n",
+    "        return inputs['input_ids'].squeeze(0), inputs['attention_mask'].squeeze(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = GLUESingleSentence(data['train']['sentence'], tokenizer)\n",
+    "val_dataset = GLUESingleSentence(data['validation']['sentence'], tokenizer)\n",
+    "test_dataset = GLUESingleSentence(data['test']['sentence'], tokenizer)\n",
+    "\n",
+    "# pick batch size based on GPU memory\n",
+    "batch_size = 512\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 17/17 [00:30<00:00,  1.77s/it]\n",
+      "100%|██████████| 3/3 [00:05<00:00,  1.70s/it]\n",
+      "100%|██████████| 3/3 [00:03<00:00,  1.31s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8551, 768])\n",
+      "torch.Size([1043, 768])\n",
+      "torch.Size([1063, 768])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mean_pooling(model_output, attention_mask):\n",
+    "    token_embeddings = model_output[0]  # First element of model_output contains all token embeddings\n",
+    "    input_mask_expanded = attention_mask.unsqueeze(-1).expand(token_embeddings.size()).float()\n",
+    "    masked_embeddings = token_embeddings * input_mask_expanded\n",
+    "    mean_embeddings = torch.sum(masked_embeddings, 1) / torch.clamp(input_mask_expanded.sum(1), min=1e-9)\n",
+    "    return torch.nn.functional.normalize(mean_embeddings, p=2, dim=1)\n",
+    "\n",
+    "def extract_cls(model_output):\n",
+    "    last_hidden_state = model_output['last_hidden_state']\n",
+    "    cls_embedding = last_hidden_state[:, 0, :]\n",
+    "    return cls_embedding\n",
+    "\n",
+    "def compute_embeddings(loader):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        embeddings = []\n",
+    "        for input_ids, attention_mask in tqdm(loader):\n",
+    "            input_ids = input_ids.to(device)\n",
+    "            attention_mask = attention_mask.to(device)\n",
+    "\n",
+    "            outputs = model(input_ids, attention_mask=attention_mask)\n",
+    "\n",
+    "            # embeding = mean_pooling(outputs, attention_mask)\n",
+    "            embeding = extract_cls(outputs)\n",
+    "\n",
+    "            embeddings.append(embeding)\n",
+    "\n",
+    "        return torch.cat(embeddings, 0)\n",
+    "    \n",
+    "train_embed = compute_embeddings(train_loader)\n",
+    "val_embed = compute_embeddings(val_loader)\n",
+    "test_embed = compute_embeddings(test_loader)\n",
+    "\n",
+    "print(train_embed.shape)\n",
+    "print(val_embed.shape)\n",
+    "print(test_embed.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = train_embed.cpu().numpy()\n",
+    "X_val = val_embed.cpu().numpy()\n",
+    "X_test = test_embed.cpu().numpy()\n",
+    "\n",
+    "Y_train = np.array(data[\"train\"][\"label\"])\n",
+    "Y_val = np.array(data[\"validation\"][\"label\"])\n",
+    "Y_test = np.array(data[\"test\"][\"label\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### previous system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ~13 minutes for CLS\n",
     "\n",
     "class CustomDataset(Dataset):\n",
@@ -288,6 +475,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## saving embeddings to file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -297,7 +491,8 @@
     "# TODO: load_file has bugs :(\n",
     "output_directory = f\"./output/{embedding_param}\"\n",
     "\n",
-    "Path(output_directory).mkdir(parents=True, exist_ok=True)\n",
+    "output_path = pathlib.Path(output_directory)\n",
+    "output_path.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "if embedding_param == \"cls\" or embedding_param == \"mean_pooling\":\n",
     "    x_suffix = \"npy\"\n",
@@ -352,9 +547,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54 hyperparameter combinations\n"
+     ]
+    }
+   ],
    "source": [
     "param_grid = {\n",
     "    'num_epochs': [50],\n",
@@ -378,9 +581,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving results to ./output/val_results_cls_cola_20231129_140656.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Best Acc: 0.76414, Last test: 0.75935: 100%|██████████| 54/54 [01:59<00:00,  2.22s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "# setup for logging\n",
     "save_file_id = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
@@ -428,12 +646,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best mcc: 0.43688\n",
+      "        mcc        f1  accuracy  num_epochs  batch_size  learning_rate  \\\n",
+      "5  0.436881  0.758389  0.758389          50          32           0.01   \n",
+      "\n",
+      "  category   norm  input_size  layer_size  num_layers  weight_decay  patience  \\\n",
+      "5       BC  False         768         768           2        0.0001         3   \n",
+      "\n",
+      "   min_delta device  \n",
+      "5          0   cuda  \n"
+     ]
+    }
+   ],
    "source": [
-    "# results_df = pd.read_csv(results_filename)\n",
-    "results_df = pd.read_csv(\"output/val_results_cola_20231127_151717.csv\")\n",
+    "results_df = pd.read_csv(results_filename)\n",
+    "# results_df = pd.read_csv(\"output/val_results_cola_20231127_151717.csv\")\n",
     "metric = \"mcc\"\n",
     "best = results_df[metric].max()\n",
     "best_row = results_df[results_df[metric] == best]\n",
